Remove debug hide all; fix icons

--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
     "components/NavItem.html",
     "components/TOTablePage.html",
     "components/TOTablePage.css"
-  ]
+  ],
+  "icon": "menu_town.svg"
 }
